# bibliography

./: .baw  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  pyproject.toml  requirements.dev  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
bibliography/: __init__.py  cli.py  judge.py  label.py  strategy.py  utils.py
bibliography/features/: alternate.py  column.py  legacy.py  result.py  vspace.py
bibliography/layout/: alternate.py  column.py  utils.py  vspace.py
bibliography/machine/: author.py  runtime.py  title.py
bibliography/reference/: __init__.py  freeand.py  magic.py  number.py  tech.py
docs/: index.rst
tests/: __init__.py  conftest.py  test_alternate.py  test_double_column.py  test_headline.py  test_invalid_input.py  test_parse_alternate.py  test_parse_double_column.py  test_reference_and.py  test_reference_and_parser.py  test_reference_tech.py  test_reference_tech_parser.py  test_validate.py
tests/expected/: bachelor090  bachelor128  diss143  diss143p131  diss148  diss170  diss172  diss266  diss272  master072  master083  master083last  master110  master116  master148  master155
