[build-system]
requires = [
    "setuptools>=83.0.0",
    "wheel>=0.47.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "bibliographia"
version = "0.3.3"
description = ""
requires-python = ">=3.12"
authors = [
    { name = "Helmut Konrad Schewe", email = "helmutus@outlook.com" },
]
dependencies = [
    "configos>=1.0.4,<2.0.0",
    "elementae>=1.0.1,<2.0.0",
    "exemplum>=1.0.1,<2.0.0",
    "geostrat>=1.5.1,<2.0.0",
    "germania>=1.32.0,<2.0.0",
    "iamraw>=4.92.0,<5.0.0",
    "pictura>=1.0.1,<2.0.0",
    "ughost>=1.0.1,<2.0.0",
    "utilo>=2.109.1,<3.0.0",
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.readme]
file = "README"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "gennex==1.0.3",
    "hoverpower==1.5.2",
    "rawmaker==2.40.5",
    "utilotest==1.0.4",
]

[project.urls]
Homepage = "https://github.com/anaticulae/bibliography"
Repository = "https://github.com/anaticulae/bibliography"

[project.scripts]
bibliography = "bibliography.cli:main"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.changelog]
mode = "init"
output_format = "md"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"

[tool.semantic_release.commit_parser_options]
patch_tags = [
    "build",
    "chore",
    "ci",
    "deps",
    "docs",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = [
    "feat",
]

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "bibliography",
    "bibliography.features",
    "bibliography.layout",
    "bibliography.machine",
    "bibliography.reference",
]
exclude = [
    "tests*",
]

[tool.hoverpower]
packages = [
    "BACHELOR",
    "BOOK",
    "DISS",
    "MASTER",
    "ORDER",
]
